# BoardStation

./: .gitignore  BUILD_INSTRUCTIONS.md  BoardStation.pro  BoardStation.qtvscr  BoardStationApp.cpp  BoardStationApp.h  BoardStation_ru_RU.ts  CMakeLists_test.txt  Colors.qml  QmlMainWindow.cpp  QmlMainWindow.h  README_BooleanParameter.md  README_New_Interface.md  README_QML_Interface.md  README_SQLite_Module.md  config_example.json  config_example_boolean.json  config_example_updated.json  guide.ai  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  test_boolean.json  test_boolean_parameter.cpp  test_database.cpp  test_parameters.cpp  test_qml.cpp
Documents/: guide.ai
Interface/: BoardParametersTreeModelProxy.cpp  BoardParametersTreeModelProxy.h  ChartsPanel.cpp  ChartsPanel.h  ControlDelegate.cpp  ControlDelegate.h  DebugView.cpp  DebugView.h  ParametersChartView.cpp  ParametersChartView.h  ParametersTreeView.cpp  ParametersTreeView.h  PlayerView.cpp  PlayerView.h  SessionFrame.cpp  SessionFrame.h  SessionListView.h  (+9 more)
Model/RCDriver/: CMakeLists.txt  datastructures.h  driverfactory.cpp  driverfactory.h  driverinterface.h  messagepackage.cpp  messagepackage.h  serialdriver.cpp  serialdriver.h
Model/RCDriver/common/: crc8.cpp  crc8.h
Model/RCDriver/driver/: protocol.h  protocolfactory.cpp  protocolfactory.h  serialprotocol.cpp  serialprotocol.h
Model/RCDriver/io/: connection.h  context.cpp  context.h  devicefactory.cpp  devicefactory.h  iodevice.h  message.cpp  message.h  serial.h  serialport.cpp  serialport.h
Model/RCDriver/listeners/: connectionlistener.h  datalistener.h  listener.h  listenermanager.h  messagelistener.cpp  messagelistener.h  notifier.cpp  notifier.h  subject.h  subjectcontainer.h
Model/RCDriver/logic/: devicemanager.cpp  devicemanager.h  manager.h
(+225 files in other folders)
